--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,3 +1,10 @@
 .container {
   margin: 20px auto;
 }
+
+/* RESPONSIVE DESIGN */
+@media screen and (max-width: 770px) {
+  .phone-stack {
+    width: 100%;
+  }
+}
