--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,5 +1,46 @@
+/* GENERAL STYLES */
 .container {
-  margin: 20px auto;
+  margin: 10px auto;
+}
+
+body {
+  background-color: grey;
+  /* color: white; */
+}
+
+/* FORM */
+#form-div {
+  background-color: rgb(90, 89, 89);
+  border-radius: 8px;
+  padding: 10px;
+  color: white;
+}
+
+input {
+  background-color: rgb(90, 89, 89);
+  border: solid rgb(198, 195, 195) 1px;
+  color: rgb(198, 195, 195);
+  margin-left: 10px;
+}
+
+button {
+  margin-left: 10px;
+}
+
+/* RESULTS */
+
+.phone-stack {
+  background-color: rgb(90, 89, 89);
+  border-radius: 8px;
+  padding: 10px;
+  height: 250px;
+  overflow-y: auto;
+  text-align: center;
+  color: rgb(198, 195, 195);
+}
+
+li {
+  margin: 10px;
 }
 
 /* RESPONSIVE DESIGN */
