--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,6 +14,10 @@ body {
   /* color: white; */
 }
 
+#hidden {
+  display: none;
+}
+
 /* FORM */
 #form-div {
   background-color: #424242;
@@ -30,7 +34,7 @@ input {
   width: 60px;
 }
 
-button {
+.btn {
   margin-left: 10px;
 }
 
