--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -46,13 +46,18 @@ input {
   padding: 10px;
   height: 250px;
   overflow-y: auto;
-  text-align: center;
+  text-align: start;
   color: #FFFFFF;
+}
+
+img {
+  display: flex;
+  float: right;
+  object-position: center top;
 }
 
 li {
   margin: 10px;
-  padding-right: 25px;
   list-style: none;
 }
 
