--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -1,18 +1,15 @@
 /* GENERAL STYLES */
+body {
+  background-color: #303030;
+  color: #FFFFFF;
+}
+
 .container {
   margin: 10px auto;
 }
 
-h1 {
-  color: #FFFFFF;
-}
-
-h3 {
-  color: #FFFFFF;
-}
-
-body {
-  background-color: #303030;
+#hidden {
+  display: none;
 }
 
 /* FORM */
@@ -20,7 +17,6 @@ body {
   background-color: #424242;
   border-radius: 8px;
   padding: 10px;
-  color: #FFFFFF;
   display: flex;
   justify-content: space-between;
 }
@@ -30,6 +26,10 @@ input {
   border: solid rgb(198, 195, 195) 1px;
   color: #FFFFFF;
   margin-left: 10px;
+}
+
+input#other-age {
+  width: 70px;
 }
 
 .btn {
@@ -45,13 +45,10 @@ input {
   height: 270px;
   overflow-y: auto;
   text-align: start;
-  color: #FFFFFF;
 }
 
 img {
-  display: flex;
   float: right;
-  object-position: center top;
 }
 
 ul {
@@ -65,6 +62,11 @@ li {
 
 table {
   width: 100%;
+}
+
+.diff {
+  color: rgba(255, 255, 255, 0.650);
+  font-style: italic;
 }
 
 /* RESPONSIVE DESIGN */
